<resources>
    <string name="app_name">LIBIHB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="this_is_about_us">This is about us</string>
    <string name="this_is_contact_us">Dornea Sergiu</string>
    <string name="this_is_log_out">this is log out</string>
    <string name="this_is_settings">this is settings</string>
    <string name="this_is_share">this is share</string>
    <string name="this_is_about_us_fragment">We believe that life is better in hiking boots :)) So this is a simple android travel application that lets you keep a record of all of the mountain peaks you have conquered.</string>

    <string name="place_location">place location</string>
    <string name="date_of_travel">place date</string>
    <string name="place_name">place name</string>
    <string name="life_is_better_in_hiking_boots">Life is better in hiking boots</string>
    <string name="edit_button">edit_button</string>
    <string name="add_memory">add_memory</string>
    <string name="floatbtn">floatbtn</string>
    <string name="add_button">add_button</string>
    <string name="place_name1">Place name</string>
    <string name="plc_date">plc_date</string>
    <string name="input_place_name">Input place name:</string>
    <string name="place_name2">Place name:</string>
    <string name="vf_moldoveanu">ex: Vf. Moldoveanu</string>
    <string name="jude_ul_arge_masivul_f_g_ra">Județul Argeș, Masivul Făgăraș</string>
    <string name="place_location2">Place location:</string>
    <string name="dd_mm_yyyy">dd-MM-yyyy</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="jud_arges">ex: Jud.Arges</string>
    <string name="date">Date:</string>
    <string name="mountain_drawing">mountain drawing</string>
    <string name="enjoy">Enjoy!</string>
    <string name="phone">Phone: +40 762626262</string>
    <string name="Email">Email: dorneasergiu@gmail.com</string>
    <string name="you_can_also_find_me_on">You can also find me on:</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="youtube">Youtube</string>
    <string name="pick_date">Pick date: </string>
</resources>