<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/constrLayout"
    android:background="@color/lightgreen"
    android:layout_margin = "7dp"
    android:padding="10dp"
    >




    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/title_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/rimetea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CornerRound" />

    <!--tv for PLACE NAME -->
    <TextView
        android:id="@+id/place_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="32dp"
        android:text="@string/place_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/title_img"
        app:layout_constraintTop_toTopOf="@+id/title_img" />


    <!--tv for PLACE LOCATION -->
    <TextView
        android:id="@+id/place_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/place_location"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/title_img"
        app:layout_constraintTop_toBottomOf="@+id/place_name"

        />


    <!--tv for DATE OF TRAVEL -->
    <TextView
        android:id="@+id/date_of_travel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/date_of_travel"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/constrLayout"
        app:layout_constraintTop_toBottomOf="@+id/place_location"

        />


</androidx.constraintlayout.widget.ConstraintLayout>